# nautobot-app-secrets-providers

./: .cookiecutter.json  .dockerignore  .env.example  .gitignore  .travis.yml  CHANGELOG.md  GETTING_STARTED.md  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  rebake.yml  upstream_testing.yml
changes/: 130.changed  131.added  134.added  134.changed  134.removed  137.documentation  140.housekeeping  145.changed  153.dependencies  156.documentation  169.added  179.dependencies  179.housekeeping  181.housekeeping  183.fixed  187.documentation  192.housekeeping  195.fixed  207.fixed  208.documentation  219.added  221.added  64.added  67.added  88.added
development/: Dockerfile  creds.example.env  dev.env  development.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.requirements.yml  docker-compose.vault.yml  nautobot_config.py  towncrier_template.j2
docs/: index.md  requirements.txt
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/providers/: aws_setup.md  azure_setup.md  bitwarden_setup.md  delinea_setup.md  hashicorp_setup.md  index.md  onepassword_setup.md  password_manager_pro_setup.md
docs/admin/release_notes/: version_1.0.md  version_1.1.md  version_1.2.md  version_1.3.md  version_1.4.md  version_2.0.md  version_2.1.md  version_3.0.md  version_3.1.md  version_3.2.md  version_4.0.md
docs/assets/overrides/partials/: copyright.html
docs/dev/: contributing.md  dev_environment.md  extending.md  release_checklist.md
docs/dev/code_reference/: api.md  index.md  package.md  providers.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  faq.md
nautobot_secrets_providers/: __init__.py  app-config-schema.json  constants.py  secrets.py  signals.py  template_content.py  urls.py  views.py
nautobot_secrets_providers/api/: __init__.py
nautobot_secrets_providers/connectors/: __init__.py  exceptions.py  hashicorp.py
nautobot_secrets_providers/migrations/: 0001_update_thycotic_delinea_slug.py  0002_remove_bitwarden_helper_parameters.py
nautobot_secrets_providers/providers/: __init__.py  aws.py  aws_ssm.py  azure.py  bitwarden.py  choices.py  cyberark.py  delinea.py  hashicorp.py  keeper.py  one_password.py  password_manager_pro.py  thycotic.py
nautobot_secrets_providers/static/nautobot_secrets_providers/: bitwarden_widget.js
nautobot_secrets_providers/templates/nautobot_secrets_providers/: home.html  tab_secret_detail_check.html
nautobot_secrets_providers/tests/: __init__.py  nautobot_config.py  test_api.py  test_basic.py  test_providers.py
